# Mathsu

./: CMakeLists.txt  README.md
docs/doxygen/: Doxyfile
include/: header.h
src/: main.cpp
